edited services page

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Mechanical Minor Services</a></h4>
+            <h4 class="title"><a href="">Minor Mechanical Services</a></h4>
             <p class="description">Minor services, according to Custom Ridez, typically include a comprehensive vehicle system and diagnostics check; oil and oil filter change; the inspection of all fluid levels, filter conditions, tubes, and hoses for leaks; and fan belt and brake pad scans.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
