edited about section on the page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, my name is Musa. My team and I are mechanics – specialising in servicing and repairing cars – diesel and petrol. Between us we have more than 50 years experience. As owner of Custom Ridez it is my name that reflects  – hence my reputation. Hence I ask you to trust in us in providing excellent service, fair rates and 100% quality workmanship.</p>
+          <p>Hi, my name is Musa. My team and I are mechanics – specialising in servicing and repairing cars – diesel and petrol. Between us we have more than 15 years experience. As an owner of Custom Ridez it is my name that reflects  – hence my reputation. Hence I ask you to trust in us in providing excellent service, fair rates and 100% quality workmanship.</p>
         </div>
 
         <div class="row">
