--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://wa.me/+27813390237" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/custom_ridez_performance/?igshid=YmMyMTA2M2Y%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, my name is Musa. My team and I are mechanics – specialising in servicing and repairing cars – diesel and petrol. Between us we have more than 15 years experience. As an owner of Custom Ridez it is my name that reflects  – hence my reputation. Hence I ask you to trust in us in providing excellent service, fair rates and 100% quality workmanship.</p>
+          <p>Hi, my name is Musa. My team and I are mechanics and panel beaters – specialising in servicing and repairing cars (diesel and petrol). Between us we have more than 15 years experience. As an owner of Custom Ridez it is my name that reflects  – hence my reputation. Hence I ask you to trust in us in providing excellent service, fair rates and 100% quality workmanship.</p>
         </div>
 
         <div class="row">
@@ -138,7 +138,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong></p>
             </div>
           </div>
