added instagram link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://wa.me/+27813390237" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/custom_ridez_performance/?igshid=YmMyMTA2M2Y%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://instagram.com/custom_ridez_performance" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
 
