--- a/index.html
+++ b/index.html
@@ -484,13 +484,14 @@
                 <h4>Call:</h4>
                 <p>0813390237</p>
               </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.229167414651!2d28.455871315031665!3d-26.286669883401274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95267430434387%3A0x984febac2b615701!2sIndustrial%20Area%20-%20Nuffield!5e0!3m2!1sen!2sza!4v1680335805955!5m2!1sen!2sza" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.229167414651!2d28.455871315031665!3d-26.286669883401274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95267430434387%3A0x984febac2b615701!2sIndustrial%20Area%20-%20Nuffield!5e0!3m2!1sen!2sza!4v1680335805955!5m2!1sen!2sza" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <h3 style="text-align: center;">Get a Qoute</h3>
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
